# MusicConvertor

./: .flake8  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 708a762f0724_initial.py  c4d8934b733e_add_record_title.py
api/app/: app.py  config.py  main.py  models.py  schemas.py  utils.py
api/app/api_v1/: deps.py  routers.py
api/app/api_v1/endpoints/: records.py  user.py
api/db/: __init__.py  accessors.py  base.py
test/test_api/: user.py
